# llm4intent

./: .env.example  .gitignore  README.md  TIPS.md  config.json  intent_cat.json  pyproject.toml  task_generator.py
LLM4Intent/: __main__.py  autogen_mas.py  autogen_mas_test.py  background.py  contexts.py  data_types.py  intent_defination.py  langgraph_mas.py  langgraph_mas_chat.py  langgraph_mas_try.py  mas.py
LLM4Intent/common/: data_types.py  knowledge_base.py  knowledge_base_test.py  state.py  utils.py  utils_test.py
LLM4Intent/prompts/: analyzer_prompt.txt  checker_prompt.txt  main_analyzer_prompt.txt  retriever_prompt.txt  scorer_prompt.txt  stateless_checker_prompt.txt  stateless_scorer_prompt.txt  sub_analyzer_prompt.txt
LLM4Intent/roles/: analyzer.py  checker.py  checker_test.py  main_analyzer.py  retriever.py  scorer.py  stateless_checker.py  stateless_scorer.py  sub_analyzer.py
LLM4Intent/tools/: _tool_mapping.py  annotated.py  etherscan.py  etherscan_test.py  jsonrpc.py  jsonrpc_test.py  web2.py  web2_test.py  web3research.py  web3research_test.py
